# JAGS

./: Makefile.am  NEWS  aclocal.m4  configure  configure.ac
doc/manual/: Makefile.am  jags_developer_manual.tex  jags_installation_manual.tex  jags_user_manual.bib  jags_user_manual.tex  version.in
doc/manual/figures/: Makefile.am  halft.R
m4/: Makefile.am
src/include/: Console.h  version.h.in
src/include/compiler/: Compiler.h  CounterTab.h  Makefile.am  MixtureFactory.h  NodeFactory.h  ParseTree.h
src/include/distribution/: ArrayDist.h  Distribution.h  ScalarDist.h  VectorDist.h
src/include/function/: ArrayFunction.h  ArrayLogDensity.h  FuncTab.h  Function.h  ScalarFunction.h  ScalarLogDensity.h  ScalarVectorFunction.h  VectorFunction.h  VectorLogDensity.h  testfun.h
src/include/graph/: AggNode.h  ArrayLogicalNode.h  ArrayStochasticNode.h  ConstantNode.h  DeterministicNode.h  LinkNode.h  LogicalNode.h  Makefile.am  MixTab.h  MixtureNode.h  Node.h  ScalarLogicalNode.h  ScalarStochasticNode.h  StochasticNode.h  VSLogicalNode.h  VectorLogicalNode.h  VectorStochasticNode.h
src/include/model/: BUGSModel.h  Monitor.h  NodeArray.h  NodeArraySubset.h  SymTab.h
src/include/module/: Module.h  ModuleError.h
src/include/rng/: RNG.h  RNGFactory.h
src/include/sampler/: GraphView.h  ImmutableSampler.h  Metropolis.h  MutableSampler.h  Sampler.h  TemperedMetropolis.h
src/include/sarray/: Range.h  RangeIterator.h  SArray.h  SimpleRange.h
src/include/util/: dim.h  integer.h  logical.h
src/jrmath/: gamma.c  rbeta.c  rbinom.c  rgamma.c  rhyper.c
src/lib/: Console.cc  Makefile.am
src/lib/compiler/: Compiler.cc  ConstantFactory.cc  CounterTab.cc  LogicalFactory.cc  MixCompiler.cc  MixCompiler.h  MixtureFactory.cc  NodeFactory.cc  ParseTree.cc  parser.cc  parser.h  parser.yy  parser_extra.h  scanner.ll
src/lib/distribution/: ArrayDist.cc  DistPtr.cc  Distribution.cc  RScalarDist.cc  ScalarDist.cc  VectorDist.cc  c99_math.c
src/lib/function/: ArrayFunction.cc  ArrayLogDensity.cc  DFunction.cc  DPQFunction.cc  FuncError.cc  FuncTab.cc  Function.cc  FunctionPtr.cc  Makefile.am  PFunction.cc  QFunction.cc  ScalarFunction.cc  ScalarLogDensity.cc  ScalarVectorFunction.cc  VectorFunction.cc  VectorLogDensity.cc  testfun.cc
src/lib/graph/: AggNode.cc  ArrayLogicalNode.cc  ArrayStochasticNode.cc  ConstantNode.cc  DeterministicNode.cc  LinkNode.cc  LogicalNode.cc  Makefile.am  MixTab.cc  MixtureNode.cc  Node.cc  NodeError.cc  ScalarLogicalNode.cc  ScalarStochasticNode.cc  StochasticNode.cc  VSLogicalNode.cc  VectorLogicalNode.cc  VectorStochasticNode.cc
src/lib/model/: BUGSModel.cc  CODA.cc  CODA.h  Model.cc  Monitor.cc  NodeArray.cc  NodeArraySubset.cc  SymTab.cc
src/lib/rng/: Makefile.am  RNGFactory.cc  RmathRNG.cc
src/lib/sampler/: GraphView.cc  ImmutableSampler.cc  Linear.cc  Metropolis.cc  MutableSampler.cc  RWMetropolis.cc  Sampler.cc  Slicer.cc  TemperedMetropolis.cc
src/lib/sarray/: Range.cc  RangeIterator.cc  SArray.cc  SimpleRange.cc
src/lib/util/: Makefile.am  dim.cc  integer.cc  logical.cc
src/modules/base/: Makefile.am  base.cc
src/modules/base/functions/: Add.cc  Add.h  And.cc  Divide.cc  Divide.h  Equal.cc  GreaterOrEqual.cc  GreaterThan.cc  LessOrEqual.cc  LessThan.cc  Makefile.am  Multiply.cc  Multiply.h  Neg.cc  (+11 more)
src/modules/base/monitors/: LogDensityMonitor.cc  LogDensityMonitor.h  LogDensityMonitorFactory.cc  LogDensityMonitorFactory.h  Makefile.am  MeanMonitor.cc  MeanMonitor.h  MeanMonitorFactory.cc  PoolMeanMonitor.cc  PoolMeanMonitor.h  PoolVarianceMonitor.cc  PoolVarianceMonitor.h  TraceMonitor.cc  TraceMonitor.h  TraceMonitorFactory.cc  VarianceMonitor.cc  VarianceMonitor.h  VarianceMonitorFactory.cc
src/modules/bugs/: Makefile.am  bugs.cc  testbugs.cc
src/modules/cut/: Makefile.am
src/modules/dic/: DefaultPoptMonitor.cc  DefaultPoptMonitor.h  DensityEnums.cc  DensityEnums.h  DensityMean.cc  DensityMean.h  DensityPoolMean.cc  DensityPoolMean.h  DensityPoolVariance.cc  DensityPoolVariance.h  DensityTotal.cc  DensityTotal.h  DensityTrace.cc  DensityTrace.h  DensityVariance.cc  DensityVariance.h  DevianceMean.cc  DevianceMean.h  DevianceMonitorFactory.h  DevianceTrace.cc  DevianceTrace.h  KL.cc  KLBern.cc  KLBin.cc  KLNorm.cc  KLPDMonitor.cc  KLPDMonitor.h  KLPois.cc  KLPoptMonitor.cc  KLPoptMonitor.h  Makefile.am  NodeDensityMonitorFactory.cc  NodeDensityMonitorFactory.h  ObsStochDensMonitorFactory.cc  ObsStochDensMonitorFactory.h  PDMonitor.cc  PDMonitor.h  PDMonitorFactory.cc  PDTrace.cc  PDTrace.h  (+20 more)
src/modules/glm/: Makefile.am  glm.cc  testglm.cc
src/modules/glm/distributions/: DOrdered.cc  DOrdered.h  DOrderedLogit.cc  DOrderedLogit.h  DOrderedProbit.cc  DOrderedProbit.h  DScaledGamma.cc  DScaledGamma.h  DScaledWishart.cc  DScaledWishart.h  Makefile.am  testglmdist.cc  testglmdist.h
src/modules/glm/samplers/: AlbertChib.cc  BinaryLogit.cc  Classify.cc  Classify.h  GLMBlock.cc  GLMBlock.h  GLMFactory.cc  GLMFactory.h  GLMGenericFactory.cc  GLMGibbs.cc  GLMMethod.cc  GLMMethod.h  GLMSampler.cc  GLMSampler.h  HolmesHeld.cc  HolmesHeldBlock.cc  HolmesHeldBlock.h  HolmesHeldBlockFactory.cc  HolmesHeldBlockFactory.h  HolmesHeldFactory.cc  HolmesHeldGibbs.cc  IWLS.cc  IWLS.h  IWLSFactory.cc  IWLSFactory.h  LGMix.cc  LGMix.h  LogNormalLinear.cc  LogNormalLinear.h  LogisticLinear.cc  LogisticLinear.h  MNormalLinear.cc  MNormalLinear.h  Makefile.am  OrderedLogit.cc  OrderedLogit.h  OrderedProbit.cc  OrderedProbit.h  Outcome.cc  Outcome.h  (+54 more)
src/modules/lecuyer/: Makefile.am  RngStream.cc  RngStream.h  RngStreamFactory.cc  lecuyer.cc
src/modules/mix/: Makefile.am  mix.cc  testmix.cc  testmix.h
src/modules/mix/distributions/: DBetaBin.cc  DBetaBin.h  DNormMix.cc  DNormMix.h  DPick.cc  DPick.h  Makefile.am  testmixdist.cc  testmixdist.h
src/modules/mix/samplers/: DirichletCat.cc  DirichletInfo.cc  DirichletInfo.h  LDA.cc  Makefile.am  MixSampler.cc  NormMix.cc  NormMix.h
src/terminal/: Makefile.am  ReadData.cc  parser.cc  parser.h  parser.yy  scanner.cc  scanner.ll
test/: Makefile.am  bugs.cc  glm.cc  mix.cc
win/: jags.nsi
(+208 files in other folders)
