noinst_LTLIBRARIES = libbasemonitors.la

libbasemonitors_la_CPPFLAGS = -I$(top_srcdir)/src/include

libbasemonitors_la_SOURCES = TraceMonitor.cc TraceMonitorFactory.cc	\
MeanMonitor.cc MeanMonitorFactory.cc \
VarianceMonitor.cc VarianceMonitorFactory.cc \
LogDensityMonitor.cc LogDensityMonitorFactory.cc

noinst_HEADERS = TraceMonitor.h TraceMonitorFactory.h MeanMonitor.h	\
MeanMonitorFactory.h VarianceMonitor.h VarianceMonitorFactory.h \
LogDensityMonitor.h LogDensityMonitorFactory.h
