noinst_LTLIBRARIES = libbasemonitors.la

libbasemonitors_la_CPPFLAGS = -I$(top_srcdir)/src/include

libbasemonitors_la_SOURCES = TraceMonitor.cc TraceMonitorFactory.cc	\
MeanMonitor.cc PoolMeanMonitor.cc MeanMonitorFactory.cc \
VarianceMonitor.cc PoolVarianceMonitor.cc VarianceMonitorFactory.cc

noinst_HEADERS = TraceMonitor.h TraceMonitorFactory.h MeanMonitor.h	\
MeanMonitorFactory.h VarianceMonitor.h VarianceMonitorFactory.h \
PoolMeanMonitor.h PoolVarianceMonitor.h 
